--- a/Diagnosis.App/Styles/SharedStyles.xaml
+++ b/Diagnosis.App/Styles/SharedStyles.xaml
@@ -1,81 +1,111 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <!-- base control styles -->
-    <Style TargetType="Control" x:Key="ErrorToolTip">
+    <Style TargetType="Control"
+           x:Key="ErrorToolTip">
         <Style.Triggers>
-            <Trigger Property="Validation.HasError" Value="true">
-                <Setter Property="ToolTip" Value="{Binding RelativeSource={RelativeSource Self}, Path=(Validation.Errors).CurrentItem.ErrorContent}"/>
+            <Trigger Property="Validation.HasError"
+                     Value="true">
+                <Setter Property="ToolTip"
+                        Value="{Binding RelativeSource={RelativeSource Self}, Path=(Validation.Errors).CurrentItem.ErrorContent}" />
             </Trigger>
         </Style.Triggers>
     </Style>
-    <Style TargetType="TextBox" BasedOn="{StaticResource ErrorToolTip}">
-        <Setter Property="Height" Value="23" />
-        <Setter Property="VerticalContentAlignment" Value="Center" />        
+    <Style TargetType="TextBox"
+           BasedOn="{StaticResource ErrorToolTip}">
+        <Setter Property="Height"
+                Value="23" />
+        <Setter Property="VerticalContentAlignment"
+                Value="Center" />
     </Style>
-    <Style TargetType="ComboBox" BasedOn="{StaticResource ErrorToolTip}">
-        <Setter Property="Height" Value="23" />
+    <Style TargetType="ComboBox"
+           BasedOn="{StaticResource ErrorToolTip}">
+        <Setter Property="Height"
+                Value="23" />
     </Style>
-    <Style TargetType="DatePicker" BasedOn="{StaticResource ErrorToolTip}">
-        <Setter Property="FirstDayOfWeek" Value="Monday" />
+    <Style TargetType="DatePicker"
+           BasedOn="{StaticResource ErrorToolTip}">
+        <Setter Property="FirstDayOfWeek"
+                Value="Monday" />
     </Style>
     <Style TargetType="TextBlock">
         <Style.Triggers>
-            <Trigger Property="IsEnabled" Value="False">
+            <Trigger Property="IsEnabled"
+                     Value="False">
                 <Setter Property="Foreground"
-                        Value="{StaticResource {x:Static SystemColors.GrayTextBrushKey}}"/>
+                        Value="{StaticResource {x:Static SystemColors.GrayTextBrushKey}}" />
             </Trigger>
         </Style.Triggers>
     </Style>
 
     <!-- buttons -->
-    <Style x:Key="DialogButtonsPanel" TargetType="{x:Type StackPanel}">
-        <Setter Property="Orientation" Value="Horizontal" />
-        <Setter Property="HorizontalAlignment" Value="Right" />
+    <Style x:Key="DialogButtonsPanel"
+           TargetType="{x:Type StackPanel}">
+        <Setter Property="Orientation"
+                Value="Horizontal" />
+        <Setter Property="HorizontalAlignment"
+                Value="Right" />
         <Style.Resources>
-            <Style TargetType="Button" >
-                <Setter Property="MinWidth" Value="75"/>
-                <Setter Property="MinHeight" Value="23"/>
-                <Setter Property="Margin" Value="10,10,0,0"/>
+            <Style TargetType="Button">
+                <Setter Property="MinWidth"
+                        Value="75" />
+                <Setter Property="MinHeight"
+                        Value="23" />
+                <Setter Property="Margin"
+                        Value="10,10,0,0" />
             </Style>
         </Style.Resources>
     </Style>
 
-    <Style TargetType="Button" BasedOn="{StaticResource {x:Type Button}}" x:Key="squareButton" >
-        <Setter Property="Width" Value="{Binding ActualHeight, RelativeSource={RelativeSource Self}}" />
+    <Style TargetType="Button"
+           BasedOn="{StaticResource {x:Type Button}}"
+           x:Key="squareButton">
+        <Setter Property="Width"
+                Value="{Binding ActualHeight, RelativeSource={RelativeSource Self}}" />
     </Style>
 
-    <Style TargetType="Image" x:Key="buttonIcon">
-        <Setter Property="Margin" Value="0,0,5,0" />
-        <Setter Property="SnapsToDevicePixels" Value="True" />
-        <Setter Property="Height" Value="16" />
-        <Setter Property="Width" Value="16" />
+    <Style TargetType="Image"
+           x:Key="buttonIcon">
+        <Setter Property="Margin"
+                Value="0,0,5,0" />
+        <Setter Property="SnapsToDevicePixels"
+                Value="True" />
+        <Setter Property="Height"
+                Value="16" />
+        <Setter Property="Width"
+                Value="16" />
     </Style>
 
-    <Style x:Key="{x:Static ToolBar.ButtonStyleKey}" TargetType="{x:Type Button}">
+    <Style x:Key="{x:Static ToolBar.ButtonStyleKey}"
+           TargetType="{x:Type Button}">
         <Style.Triggers>
-            <DataTrigger Binding="{Binding IsEnabled, RelativeSource={RelativeSource Self}}" Value="False">
-                <Setter Property="Opacity" Value="0.35"/>
+            <DataTrigger Binding="{Binding IsEnabled, RelativeSource={RelativeSource Self}}"
+                         Value="False">
+                <Setter Property="Opacity"
+                        Value="0.35" />
             </DataTrigger>
         </Style.Triggers>
         <Style.Resources>
-            <Style TargetType="Image" BasedOn="{StaticResource buttonIcon}">
+            <Style TargetType="Image"
+                   BasedOn="{StaticResource buttonIcon}">
             </Style>
         </Style.Resources>
     </Style>
-    
+
     <Style TargetType="ToolBar">
-        <Setter Property="ToolBarTray.IsLocked" Value="True" />
+        <Setter Property="ToolBarTray.IsLocked"
+                Value="True" />
         <Style.Resources>
             <Style TargetType="Button">
-                <Setter Property="MinWidth" Value="16"/>
+                <Setter Property="MinWidth"
+                        Value="16" />
             </Style>
         </Style.Resources>
     </Style>
     <!-- forms -->
 
-    
-    
-    <Style TargetType="DockPanel" x:Key="formLine">
+    <Style TargetType="DockPanel"
+           x:Key="formLine">
         <Setter Property="Margin">
             <Setter.Value>
                 <Thickness Bottom="10"></Thickness>
@@ -83,27 +113,39 @@
         </Setter>
     </Style>
 
-    <Style TargetType="Label" x:Key="label">
-        <Setter Property="VerticalAlignment" Value="Center" />
+    <Style TargetType="Label"
+           x:Key="label">
+        <Setter Property="VerticalAlignment"
+                Value="Center" />
     </Style>
-    <Style TargetType="Label" x:Key="label120" BasedOn="{StaticResource label}">
-        <Setter Property="Width" Value="120" />
+    <Style TargetType="Label"
+           x:Key="label120"
+           BasedOn="{StaticResource label}">
+        <Setter Property="Width"
+                Value="120" />
     </Style>
-    <Style TargetType="Label" x:Key="label90" BasedOn="{StaticResource label}">
-        <Setter Property="Width" Value="90" />
+    <Style TargetType="Label"
+           x:Key="label90"
+           BasedOn="{StaticResource label}">
+        <Setter Property="Width"
+                Value="90" />
     </Style>
 
-    <Style TargetType="TextBlock" x:Key="watermark">
-        <Setter Property="VerticalAlignment" Value="Center" />
+    <Style TargetType="TextBlock"
+           x:Key="watermark">
+        <Setter Property="VerticalAlignment"
+                Value="Center" />
         <Setter Property="Margin">
             <Setter.Value>
                 <Thickness Left="5" />
             </Setter.Value>
         </Setter>
     </Style>
-    
+
     <!-- misc -->
-    <Style TargetType="TextBlock" x:Key="ScreenTitle">
-        <Setter Property="FontSize" Value="20" />
-    </Style>  
+    <Style TargetType="TextBlock"
+           x:Key="ScreenTitle">
+        <Setter Property="FontSize"
+                Value="20" />
+    </Style>
 </ResourceDictionary>
