--- a/Diagnosis.App/Styles/TabControl.xaml
+++ b/Diagnosis.App/Styles/TabControl.xaml
@@ -1,8 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style x:Key="verticalTextBlock" TargetType="TextBlock">  
-        <Setter Property="TextAlignment" Value="Center" />
-        <Setter Property="RenderTransformOrigin" Value="0.5,0.5" />
+    <Style x:Key="verticalTextBlock"
+           TargetType="TextBlock">
+        <Setter Property="TextAlignment"
+                Value="Center" />
+        <Setter Property="RenderTransformOrigin"
+                Value="0.5,0.5" />
         <Setter Property="LayoutTransform">
             <Setter.Value>
                 <TransformGroup>
@@ -12,13 +15,18 @@
         </Setter>
     </Style>
 
-    <Style x:Key="leftSideExpander" TargetType="Expander">
-        <Setter Property="ExpandDirection" Value="Right" />
-        <Setter Property="RenderTransformOrigin" Value="0.5,0.5" />
-        <Setter Property="Padding" Value="1,0,3,0" />
+    <Style x:Key="leftSideExpander"
+           TargetType="Expander">
+        <Setter Property="ExpandDirection"
+                Value="Right" />
+        <Setter Property="RenderTransformOrigin"
+                Value="0.5,0.5" />
+        <Setter Property="Padding"
+                Value="1,0,3,0" />
     </Style>
 
-    <Style x:Key="tabHeaderWithLine" TargetType="{x:Type TabItem}">
+    <Style x:Key="tabHeaderWithLine"
+           TargetType="{x:Type TabItem}">
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TabItem}">
@@ -30,30 +38,34 @@
                             BorderBrush="Gray"
                             Background="Transparent"
                             BorderThickness="4,0,0,0">
-                        <Border
-                                x:Name="Border"
+                        <Border x:Name="Border"
                                 Width="Auto"
                                 Height="Auto"
                                 VerticalAlignment="Bottom">
-                            <ContentPresenter
-                                               x:Name="ContentSite"
-                                               VerticalAlignment="Stretch"
-                                               HorizontalAlignment="Stretch"
-                                               ContentSource="Header"
-                                               Margin="0"
-                                               Width="Auto"
-                                               Height="Auto" />
+                            <ContentPresenter x:Name="ContentSite"
+                                              VerticalAlignment="Stretch"
+                                              HorizontalAlignment="Stretch"
+                                              ContentSource="Header"
+                                              Margin="0"
+                                              Width="Auto"
+                                              Height="Auto" />
                         </Border>
                     </Border>
 
                     <ControlTemplate.Triggers>
-                        <Trigger Property="IsSelected" Value="True">
-                            <Setter Property="BorderBrush" TargetName="Spacer" Value="Orange"/>
+                        <Trigger Property="IsSelected"
+                                 Value="True">
+                            <Setter Property="BorderBrush"
+                                    TargetName="Spacer"
+                                    Value="Orange" />
                         </Trigger>
-                        <Trigger SourceName="Spacer" Property="IsMouseOver" Value="True">
-                            <Setter Property="BorderBrush" TargetName="Spacer" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}"/>
+                        <Trigger SourceName="Spacer"
+                                 Property="IsMouseOver"
+                                 Value="True">
+                            <Setter Property="BorderBrush"
+                                    TargetName="Spacer"
+                                    Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}" />
                         </Trigger>
-
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
