--- a/Diagnosis.App/Styles/TreeStyle.xaml
+++ b/Diagnosis.App/Styles/TreeStyle.xaml
@@ -3,17 +3,24 @@
                     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <SolidColorBrush x:Key="GlyphBrush" Color="#444" />    
+    <SolidColorBrush x:Key="GlyphBrush"
+                     Color="#444" />
     <SolidColorBrush x:Key="itemSelectedNotActiveBrush"
-                             Color="{DynamicResource {x:Static SystemColors.ControlColorKey}}">
+                     Color="{DynamicResource {x:Static SystemColors.ControlColorKey}}">
     </SolidColorBrush>
 
-    <Style x:Key="TreeViewStyle" TargetType="TreeView">
-        <Setter Property="BorderThickness" Value="0" />
-        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-        <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled" />
-        <Setter Property="VirtualizingStackPanel.IsVirtualizing" Value="True" />
-        <Setter Property="VirtualizingStackPanel.VirtualizationMode" Value="Recycling" />
+    <Style x:Key="TreeViewStyle"
+           TargetType="TreeView">
+        <Setter Property="BorderThickness"
+                Value="0" />
+        <Setter Property="HorizontalContentAlignment"
+                Value="Stretch" />
+        <Setter Property="ScrollViewer.HorizontalScrollBarVisibility"
+                Value="Disabled" />
+        <Setter Property="VirtualizingStackPanel.IsVirtualizing"
+                Value="True" />
+        <Setter Property="VirtualizingStackPanel.VirtualizationMode"
+                Value="Recycling" />
     </Style>
 
     <Style x:Key="TreeViewItemFocusVisual">
@@ -22,44 +29,70 @@
                 <ControlTemplate>
                     <Border>
                         <Rectangle Margin="0,0,0,0"
-                             StrokeThickness="5"
-                             Stroke="Black"
-                             StrokeDashArray="1 2"
-                             Opacity="0" />
+                                   StrokeThickness="5"
+                                   Stroke="Black"
+                                   StrokeDashArray="1 2"
+                                   Opacity="0" />
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-    </Style>    
+    </Style>
 
-    <Style x:Key="ExpandCollapseToggleStyle" TargetType="{x:Type ToggleButton}">
-        <Setter Property="Focusable" Value="False" />
-        <Setter Property="Width" Value="16" />
-        <Setter Property="Height" Value="16" />
-        <Setter Property="VerticalAlignment" Value="Top" />
+    <Style x:Key="ExpandCollapseToggleStyle"
+           TargetType="{x:Type ToggleButton}">
+        <Setter Property="Focusable"
+                Value="False" />
+        <Setter Property="Width"
+                Value="16" />
+        <Setter Property="Height"
+                Value="16" />
+        <Setter Property="VerticalAlignment"
+                Value="Top" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ToggleButton}">
-                    <Border Width="16" Height="16" Background="Transparent" Padding="5,5,5,5">
-                        <Path x:Name="ExpandPath" Fill="Transparent" Stroke="#FF262626" Data="{StaticResource TreeArrow}">
+                    <Border Width="16"
+                            Height="16"
+                            Background="Transparent"
+                            Padding="5,5,5,5">
+                        <Path x:Name="ExpandPath"
+                              Fill="Transparent"
+                              Stroke="#FF262626"
+                              Data="{StaticResource TreeArrow}">
                             <Path.RenderTransform>
-                                <RotateTransform Angle="-45" CenterX="3" CenterY="3" />
+                                <RotateTransform Angle="-45"
+                                                 CenterX="3"
+                                                 CenterY="3" />
                             </Path.RenderTransform>
                         </Path>
                     </Border>
                     <ControlTemplate.Triggers>
-                        <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Stroke" TargetName="ExpandPath" Value="#FF1BBBFA" />
-                            <Setter Property="Fill" TargetName="ExpandPath" Value="Transparent" />
+                        <Trigger Property="IsMouseOver"
+                                 Value="True">
+                            <Setter Property="Stroke"
+                                    TargetName="ExpandPath"
+                                    Value="#FF1BBBFA" />
+                            <Setter Property="Fill"
+                                    TargetName="ExpandPath"
+                                    Value="Transparent" />
                         </Trigger>
-                        <Trigger Property="IsChecked" Value="True">
-                            <Setter Property="RenderTransform" TargetName="ExpandPath">
+                        <Trigger Property="IsChecked"
+                                 Value="True">
+                            <Setter Property="RenderTransform"
+                                    TargetName="ExpandPath">
                                 <Setter.Value>
-                                    <RotateTransform Angle="-135" CenterX="3" CenterY="3" />
+                                    <RotateTransform Angle="-135"
+                                                     CenterX="3"
+                                                     CenterY="3" />
                                 </Setter.Value>
                             </Setter>
-                            <Setter Property="Fill" TargetName="ExpandPath" Value="#FF595959" />
-                            <Setter Property="Stroke" TargetName="ExpandPath" Value="#FF262626" />
+                            <Setter Property="Fill"
+                                    TargetName="ExpandPath"
+                                    Value="#FF595959" />
+                            <Setter Property="Stroke"
+                                    TargetName="ExpandPath"
+                                    Value="#FF262626" />
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
@@ -67,22 +100,34 @@
         </Setter>
     </Style>
 
-    <Style x:Key="TreeViewItemStyle" TargetType="{x:Type TreeViewItem}">
-        <Setter Property="Background" Value="Transparent" />
-        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-        <Setter Property="VerticalContentAlignment" Value="Center" />
-        <Setter Property="Padding" Value="1,0,0,0" />
-        <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" />
-        <Setter Property="FocusVisualStyle" Value="{StaticResource TreeViewItemFocusVisual}" />
-        <Setter Property="KeyboardNavigation.AcceptsReturn" Value="True" />
+    <Style x:Key="TreeViewItemStyle"
+           TargetType="{x:Type TreeViewItem}">
+        <Setter Property="Background"
+                Value="Transparent" />
+        <Setter Property="HorizontalContentAlignment"
+                Value="Stretch" />
+        <Setter Property="VerticalContentAlignment"
+                Value="Center" />
+        <Setter Property="Padding"
+                Value="1,0,0,0" />
+        <Setter Property="Foreground"
+                Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" />
+        <Setter Property="FocusVisualStyle"
+                Value="{StaticResource TreeViewItemFocusVisual}" />
+        <Setter Property="KeyboardNavigation.AcceptsReturn"
+                Value="True" />
 
-        <EventSetter Event="Selected" Handler="item_selected" />
+        <EventSetter Event="Selected"
+                     Handler="item_selected" />
 
-        <Setter Property="IsSelected" Value="{Binding IsSelected}" />
-        <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}" />
+        <Setter Property="IsSelected"
+                Value="{Binding IsSelected}" />
+        <Setter Property="IsExpanded"
+                Value="{Binding IsExpanded, Mode=TwoWay}" />
     </Style>
 
-    <ControlTemplate TargetType="{x:Type TreeViewItem}" x:Key="treeViewItemControl">
+    <ControlTemplate TargetType="{x:Type TreeViewItem}"
+                     x:Key="treeViewItemControl">
         <Border Name="Bd"
                 Background="Transparent"
                 BorderBrush="{TemplateBinding BorderBrush}"
@@ -93,53 +138,89 @@
                 <Grid Margin="{Binding Converter={StaticResource lengthConverter}, RelativeSource={RelativeSource TemplatedParent}}">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
-                        <ColumnDefinition MinWidth="19" Width="Auto" />
+                        <ColumnDefinition MinWidth="19"
+                                          Width="Auto" />
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto" />
                         <RowDefinition />
                     </Grid.RowDefinitions>
-                    <ToggleButton x:Name="Expander" Grid.Column="2"  Style="{StaticResource ExpandCollapseToggleStyle}" ClickMode="Press" IsChecked="{Binding Path=IsExpanded, RelativeSource={RelativeSource TemplatedParent}}" />
-                    <ContentPresenter x:Name="PART_Header" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" ContentSource="Header" />
+                    <ToggleButton x:Name="Expander"
+                                  Grid.Column="2"
+                                  Style="{StaticResource ExpandCollapseToggleStyle}"
+                                  ClickMode="Press"
+                                  IsChecked="{Binding Path=IsExpanded, RelativeSource={RelativeSource TemplatedParent}}" />
+                    <ContentPresenter x:Name="PART_Header"
+                                      HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                      SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
+                                      ContentSource="Header" />
                 </Grid>
-                <ItemsPresenter x:Name="ItemsHost" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1" />
+                <ItemsPresenter x:Name="ItemsHost"
+                                Grid.Column="0"
+                                Grid.ColumnSpan="2"
+                                Grid.Row="1" />
             </StackPanel>
         </Border>
         <ControlTemplate.Triggers>
-            <Trigger Property="IsExpanded" Value="false">
-                <Setter Property="Visibility" TargetName="ItemsHost" Value="Collapsed" />
+            <Trigger Property="IsExpanded"
+                     Value="false">
+                <Setter Property="Visibility"
+                        TargetName="ItemsHost"
+                        Value="Collapsed" />
             </Trigger>
-            <Trigger Property="HasItems" Value="false">
-                <Setter Property="Visibility" TargetName="Expander" Value="Hidden" />
+            <Trigger Property="HasItems"
+                     Value="false">
+                <Setter Property="Visibility"
+                        TargetName="Expander"
+                        Value="Hidden" />
             </Trigger>
-            <Trigger Property="IsSelected" Value="true">
-                <Setter Property="Background" TargetName="Bd" Value="{StaticResource treeItemSelectedBrush}" />
-                <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.HighlightTextBrushKey}}" />
+            <Trigger Property="IsSelected"
+                     Value="true">
+                <Setter Property="Background"
+                        TargetName="Bd"
+                        Value="{StaticResource treeItemSelectedBrush}" />
+                <Setter Property="Foreground"
+                        Value="{DynamicResource {x:Static SystemColors.HighlightTextBrushKey}}" />
             </Trigger>
             <MultiTrigger>
                 <MultiTrigger.Conditions>
-                    <Condition Property="HasHeader" Value="false" />
-                    <Condition Property="Width" Value="Auto" />
+                    <Condition Property="HasHeader"
+                               Value="false" />
+                    <Condition Property="Width"
+                               Value="Auto" />
                 </MultiTrigger.Conditions>
-                <Setter TargetName="PART_Header" Property="MinWidth" Value="75" />
+                <Setter TargetName="PART_Header"
+                        Property="MinWidth"
+                        Value="75" />
             </MultiTrigger>
             <MultiTrigger>
                 <MultiTrigger.Conditions>
-                    <Condition Property="HasHeader" Value="false" />
-                    <Condition Property="Height" Value="Auto" />
+                    <Condition Property="HasHeader"
+                               Value="false" />
+                    <Condition Property="Height"
+                               Value="Auto" />
                 </MultiTrigger.Conditions>
-                <Setter TargetName="PART_Header" Property="MinHeight" Value="19" />
+                <Setter TargetName="PART_Header"
+                        Property="MinHeight"
+                        Value="19" />
             </MultiTrigger>
             <MultiTrigger>
                 <MultiTrigger.Conditions>
-                    <Condition Property="IsSelected" Value="true" />
-                    <Condition Property="IsSelectionActive" Value="false" />
+                    <Condition Property="IsSelected"
+                               Value="true" />
+                    <Condition Property="IsSelectionActive"
+                               Value="false" />
                 </MultiTrigger.Conditions>
-                <Setter Property="Background" TargetName="Bd" Value="{StaticResource itemSelectedNotActiveBrush}" />
-                <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" />
+                <Setter Property="Background"
+                        TargetName="Bd"
+                        Value="{StaticResource itemSelectedNotActiveBrush}" />
+                <Setter Property="Foreground"
+                        Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" />
             </MultiTrigger>
-            <Trigger Property="IsEnabled" Value="false">
-                <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}" />
+            <Trigger Property="IsEnabled"
+                     Value="false">
+                <Setter Property="Foreground"
+                        Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}" />
             </Trigger>
         </ControlTemplate.Triggers>
     </ControlTemplate>
