--- a/Diagnosis.App/Styles/SharedStyles.xaml
+++ b/Diagnosis.App/Styles/SharedStyles.xaml
@@ -102,6 +102,32 @@
             </Style>
         </Style.Resources>
     </Style>
+
+    <!-- DataGrid-->
+
+    <Style x:Key="CellStyle"
+           TargetType="DataGridCell">
+        <Setter Property="BorderThickness"
+                Value="0" />
+        <Setter Property="FocusVisualStyle"
+                Value="{x:Null}" />
+        <Setter Property="KeyboardNavigation.IsTabStop"
+                Value="False" />
+    </Style>
+
+    <Style  x:Key="SelectableCellStyle"
+            TargetType="{x:Type DataGridCell}"
+            BasedOn="{StaticResource CellStyle}">
+        <Style.Triggers>
+            <Trigger Property="IsSelected"
+                     Value="True">
+                <Setter Property="KeyboardNavigation.IsTabStop"
+                        Value="True" />
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+
     <!-- forms -->
 
     <Style TargetType="DockPanel"
