--- a/Diagnosis.App/Controls/CardParts/Header.xaml
+++ b/Diagnosis.App/Controls/CardParts/Header.xaml
@@ -206,21 +206,9 @@
 
             <ContentPresenter Content="{Binding}"
                               Tag="{Binding HolderVm}"
+                              ContextMenu="{StaticResource HolderContextMenu}"
                               ContentTemplateSelector="{StaticResource selector}">
-                <ContentPresenter.ContextMenu>
-                    <ContextMenu DataContext="{Binding Path=PlacementTarget.Tag, RelativeSource={RelativeSource Self}}">
-                        <MenuItem Header="Редактировать"
-                                  InputGestureText="F2"
-                                  Command="{Binding EditCommand}" />
-                        <MenuItem Header="Добавить курс"
-                                  Command="{Binding StartCourseCommand}" />
-                        <MenuItem Header="Добавить осмотр"
-                                  Command="{Binding AddAppointmentCommand}" />
-                        <MenuItem Header="Удалить"
-                                  InputGestureText="Del"
-                                  Command="{Binding DeleteCommand}" />
-                    </ContextMenu>
-                </ContentPresenter.ContextMenu>
+               
             </ContentPresenter>
         </DockPanel>
 
