ui. Fix navigation menu area

--- a/Diagnosis.App/Controls/Search/SearchTree.xaml
+++ b/Diagnosis.App/Controls/Search/SearchTree.xaml
@@ -57,7 +57,7 @@
                            BasedOn="{StaticResource TreeViewItemStyle}">
                         -->
             <!--<Setter Property="Template"
-                                Value="{StaticResource treeViewItemControl}" />-->
+                                Value="{StaticResource TreeViewItemRightToggleControl}" />-->
             <!--
                         <EventSetter Event="KeyDown"
                                      Handler="item_KeyDown" />
