xaml. Fix NoName binding

--- a/Diagnosis.App/Controls/Headers/Holder.xaml
+++ b/Diagnosis.App/Controls/Headers/Holder.xaml
@@ -13,45 +13,17 @@
         <controls:HrsHolderDataTemplateSelector x:Key="selector">
             <controls:HrsHolderDataTemplateSelector.PatientTemplate>
                 <DataTemplate>
-                    <DockPanel>
-                        <TextBlock Text="{Binding Actual, Converter={StaticResource ManToShortName}}"
-                                   VerticalAlignment="Center"
-                                   Visibility="{Binding NoName, Converter={StaticResource NegBooleanToVisibilityConverter}}"
-                                   MinWidth="30" />
-                        <TextBlock Text="{Binding IsMale, Converter={StaticResource SexToSign}}"
-                                   FontSize="20"
-                                   Margin="20,0,5,0"
-                                   VerticalAlignment="Center" />
-                        <TextBlock Margin="5,0,10,0"
-                                   VerticalAlignment="Center">
-                            <TextBlock Text="{Binding Age}" />
-                            <TextBlock Text="{Binding Age, Converter={StaticResource AgeToLabel}}" />
-                        </TextBlock>
-                    </DockPanel>
+                    <headers:Patient />
                 </DataTemplate>
             </controls:HrsHolderDataTemplateSelector.PatientTemplate>
             <controls:HrsHolderDataTemplateSelector.CourseTemplate>
                 <DataTemplate>
-                    <TextBlock>
-                        <Run>
-                             <MultiBinding Converter="{StaticResource DateIntervalLabel}">
-                                <Binding Path="Start"
-                                         Mode="OneWay" />
-                                <Binding Path="End"
-                                         Mode="OneWay" />
-                            </MultiBinding>
-                        </Run>
-                    </TextBlock>
+                    <headers:Course />
                 </DataTemplate>
             </controls:HrsHolderDataTemplateSelector.CourseTemplate>
             <controls:HrsHolderDataTemplateSelector.AppointmentTemplate>
                 <DataTemplate>
-                    <TextBlock>
-                        <Run Text="{Binding DateAndTime, Converter={StaticResource DateLabel}}" />
-                        <TextBlock Visibility="{Binding TimeVisibility, ElementName=holder}">
-                            <Run Text="{Binding DateAndTime, StringFormat={}{0:H:mm}}" />
-                        </TextBlock>
-                    </TextBlock>
+                    <headers:Appointment />
                 </DataTemplate>
             </controls:HrsHolderDataTemplateSelector.AppointmentTemplate>
         </controls:HrsHolderDataTemplateSelector>
