--- a/Diagnosis.App/Screens/Card.xaml
+++ b/Diagnosis.App/Screens/Card.xaml
@@ -4,7 +4,6 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:beh="clr-namespace:Diagnosis.App.Behaviors"
-             xmlns:editors="clr-namespace:Diagnosis.App.Controls.Editors"
              xmlns:card="clr-namespace:Diagnosis.App.Controls.CardParts"
              xmlns:controls="clr-namespace:Diagnosis.App.Controls"
              xmlns:headers="clr-namespace:Diagnosis.App.Controls.Headers"
@@ -109,7 +108,7 @@
             </Border.BorderBrush>
 
             <Grid Margin="10,0,10,10">
-                <editors:HealthRecordEditorShared DataContext="{Binding HrEditor}" />
+                <card:HealthRecordEditor DataContext="{Binding HrEditor}" />
             </Grid>
         </Border>
     </Grid>
